--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,8 @@
     "Тестовый пример": "Test example",
     "Перевод": "Translation",
     "Язык": "English",
-    "Страница не найдена": "Page not found"
+    "Страница не найдена": "Page not found",
+    "Произошла непредвиденная ошибка": "Unexpected error",
+    "Обновить страницу": "Reload page",
+    "Вызвать ошибку": "Throw Error"
 }
