--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
     "Страница не найдена": "Page not found",
     "Произошла непредвиденная ошибка": "Unexpected error",
     "Обновить страницу": "Reload page",
-    "Вызвать ошибку": "Throw Error"
+    "Вызвать ошибку": "Throw Error",
+    "Переключить": "Toggle"
 }
