--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
     "Страница не найдена": "Страница не найдена",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
-    "Вызвать ошибку": "Вызвать ошибку"
+    "Вызвать ошибку": "Вызвать ошибку",
+    "Переключить": "Переключить"
 }
