Added translation for Navbar buttons

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
     "Произошла непредвиденная ошибка": "Unexpected error",
     "Обновить страницу": "Reload page",
     "Вызвать ошибку": "Throw Error",
-    "Переключить": "Toggle"
+    "Переключить": "Toggle",
+    "Главная": "Main",
+    "О сайте": "About"
 }
