--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
     "Вызвать ошибку": "Вызвать ошибку",
-    "Переключить": "Переключить"
+    "Переключить": "Переключить",
+    "Главная": "Главная",
+    "О сайте": "О сайте"
 }
