Updated Sidebar / Added Button themes / Fixed LangSwitcher

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,11 +2,11 @@
     "Тестовый пример": "Test example",
     "Перевод": "Translation",
     "Язык": "English",
+    "Короткий язык": "En",
     "Страница не найдена": "Page not found",
     "Произошла непредвиденная ошибка": "Unexpected error",
     "Обновить страницу": "Reload page",
     "Вызвать ошибку": "Throw Error",
-    "Переключить": "Toggle",
     "Главная": "Main",
     "О сайте": "About"
 }
