--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,11 +2,11 @@
     "Тестовый пример": "Тестовый пример",
     "Перевод": "Перевод",
     "Язык": "Русский",
+    "Короткий язык": "Ru",
     "Страница не найдена": "Страница не найдена",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Обновить страницу": "Обновить страницу",
     "Вызвать ошибку": "Вызвать ошибку",
-    "Переключить": "Переключить",
     "Главная": "Главная",
     "О сайте": "О сайте"
 }
