Added Modal, Portal, changed header and Theme

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,6 @@
     "Обновить страницу": "Reload page",
     "Вызвать ошибку": "Throw Error",
     "Главная": "Main",
-    "О сайте": "About"
+    "О сайте": "About",
+    "Войти": "Sing in"
 }
