--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,6 @@
     "Обновить страницу": "Обновить страницу",
     "Вызвать ошибку": "Вызвать ошибку",
     "Главная": "Главная",
-    "О сайте": "О сайте"
+    "О сайте": "О сайте",
+    "Войти": "Войти"
 }
