Added LoginModal and User slice

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
     "Вызвать ошибку": "Throw Error",
     "Главная": "Main",
     "О сайте": "About",
-    "Войти": "Sing in"
+    "Войти": "Sing in",
+    "Логин": "Login",
+    "Пароль": "Password"
 }
