--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,7 @@
     "Вызвать ошибку": "Вызвать ошибку",
     "Главная": "Главная",
     "О сайте": "О сайте",
-    "Войти": "Войти"
+    "Войти": "Войти",
+    "Логин": "Логин",
+    "Пароль": "Пароль"
 }
