Added login and logout methods

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,9 @@
     "Главная": "Main",
     "О сайте": "About",
     "Войти": "Sing in",
+    "Выйти": "Log out",
     "Логин": "Login",
-    "Пароль": "Password"
+    "Пароль": "Password",
+    "Форма авторизации": "Login form",
+    "Вы ввели неверный логин или пароль": "Wrong login or password"
 }
