--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,6 +10,9 @@
     "Главная": "Главная",
     "О сайте": "О сайте",
     "Войти": "Войти",
+    "Выйти": "Выйти",
     "Логин": "Логин",
-    "Пароль": "Пароль"
+    "Пароль": "Пароль",
+    "Форма авторизации": "Форма авторизации",
+    "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
